--- a/app/javascript/davechmura_website/stylesheets/_header.sass
+++ b/app/javascript/davechmura_website/stylesheets/_header.sass
@@ -8,7 +8,8 @@ header
   justify-content: space-between
   align-items: center
   text-align: center
-  height: 75px
+  height: auto
+  padding: 1rem 0 1rem 0
   z-index: 100000
   background-color: $navbarBackground
   a
