--- a/app/javascript/davechmura_website/stylesheets/_footer.sass
+++ b/app/javascript/davechmura_website/stylesheets/_footer.sass
@@ -16,9 +16,10 @@ footer
   grid-template-columns: [image] auto [sitename] auto
   align-items: center
   text-align: center
+  margin-left: 1rem
   img
     height: 35px
-    padding: 0.5rem 0 0.5rem 2rem
+    border-radius: 35px
   a
     color: $footer-link-color
     text-decoration: none
