--- a/app/javascript/davechmura_website/stylesheets/_header.sass
+++ b/app/javascript/davechmura_website/stylesheets/_header.sass
@@ -28,17 +28,19 @@ header
     align-items: center
     text-align: center
     max-height: 45px
-    padding: 0.3rem 1rem 0 1rem
     img
-      height: 55px
+      margin: 0 1rem
+      border-radius: 35px
+
     a
       font-size: 2rem
+
   nav
     ul
       li
         display: inline-block
         padding: 0.5rem 1.4em 0 0
-        font-size: 0.9em
+        font-size: 1.2rem
 
 // Screen width smaller than 600px
 @media screen and (max-width : 600px)
