--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,6 +1,6 @@
 %header
   .header-logo
-    = link_to image_tag(asset_pack_path('davechmura_website/images/davechmura_website_logo.png'), alt: "#{(t :sitename)} Logo, link to home page.", class: ' header-logo', id: root_path(anchor: 'page-top')), root_path
+    = link_to image_tag(asset_pack_path('davechmura_website/images/DavePics/hug.jpg'), alt: "#{(t :sitename)} Logo, link to home page.", class: ' header-logo', id: root_path(anchor: 'page-top')), root_path
     .sitename= link_to (t :sitename), root_path
   %nav
     %ul
