--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -5,5 +5,5 @@
   %nav
     %ul
       %li= link_to "About", about_path
-      %li= link_to "Contact Us", contact_path
+      %li= link_to "Contact Me", contact_path
       %li= link_to "Privacy", privacy_path
