--- a/app/javascript/davechmura_website/stylesheets/application.sass
+++ b/app/javascript/davechmura_website/stylesheets/application.sass
@@ -1,5 +1,4 @@
-// @import '~bootstrap/scss/functions'
-// @import '~bootstrap/scss/bootstrap'
+
 @import 'variables'
 @import 'mixins'
 
@@ -10,18 +9,18 @@
 img[alt=""], img:not([alt])
   border: 5px dashed #c00
 
-.container
-  display: grid
-  grid-template-areas: 'header header' 'content' 'debug' 'footer'
-  grid-template-columns: repeat(12, 1fr)
-  grid-template-rows: auto 1fr auto 75px
-  height: 100vh
-  margin: 0 -1.1rem 0 -1rem
-  font-family: $font-family-base
-
-.content
-  grid-column: span 12
-  padding:  0 2rem
+// .container
+//   display: grid
+//   grid-template-areas: 'header header' 'content' 'debug' 'footer'
+//   grid-template-columns: repeat(12, 1fr)
+//   grid-template-rows: auto 1fr auto 75px
+//   height: 100vh
+//   margin: 0 -1.1rem 0 -1rem
+//   font-family: $font-family-base
+//
+// .content
+//   grid-column: span 12
+//   padding:  0 2rem
 
 .debug_dump
   grid-column: span 12
