--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,11 +6,13 @@
     = csrf_meta_tags
     = stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
+    - if content_for? :head
+      = yield :head
 
   %body
-    .container#page-top
-      - unless Rails.env.production?
-        .corner-ribbon.top-right.sticky.red.shadow= link_to('Work in Progress', project_status_path)
+    .container#page-top{'data-behavior' => "vue" }'
+    - unless Rails.env.production?
+      .corner-ribbon.top-right.sticky.red.shadow= link_to('Work in Progress', project_status_path)
 
       = render 'layouts/header'
 
