REFACTOR: Remove vue (for now) and restore jquery and bootstrap.

--- a/app/javascript/davechmura_website/stylesheets/_header.sass
+++ b/app/javascript/davechmura_website/stylesheets/_header.sass
@@ -11,7 +11,11 @@ header
   height: auto
   padding: 1rem 0 1rem 0
   z-index: 100000
-  background-color: $navbarBackground
+  background-image: url("../images/DavePics/hug_70.svg")
+  background-repeat: no-repeat
+  background-attachment: scroll
+  background-position: center center
+  // background-color: $navbarBackground
   a
     text-decoration: none
     color: $navbarLink
