--- a/app/javascript/davechmura_website/stylesheets/resume.sass
+++ b/app/javascript/davechmura_website/stylesheets/resume.sass
@@ -1,9 +1,10 @@
 // Place all the styles related to the resume controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@import '~bootstrap/scss/functions'
 @import '~bootstrap/scss/bootstrap'
-@import './mixins'
-@import './variables'
+@import 'variables'
+@import 'mixins'
 
 .resume-header
   height: 250px
