--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -19,14 +19,16 @@
         %li.nav-item
           = link_to (t :sitename), root_path, class: 'navbar-brand', id: root_path(anchor: 'page-top')
           %span.sr-only (current)
+
         %li.nav-item= link_to 'Skills', root_path(anchor: 'skills'), class: 'nav-link page-scroll'
         -# %li.nav-item= link_to 'Services', root_path(anchor: 'services'), class: 'nav-link page-scroll'
         %li.nav-item= link_to 'Portfolio', root_path(anchor: 'portfolio'), class: 'nav-link page-scroll'
         -# %li.nav-item= link_to 'Resume', resume_path, class: 'nav-link page-scroll'
-        %li.nav-item= link_to 'Team', root_path(anchor: 'team'), class: 'nav-link page-scroll'
+        %li.nav-item= link_to 'Roles', root_path(anchor: 'team'), class: 'nav-link page-scroll'
         -# %li.nav-item= link_to 'Contact Local', root_path(anchor: 'contact'), class: 'nav-link page-scroll'
+        %li.nav-item= link_to 'Blog', posts_path, class: 'nav-link'
       .nav.my-2.my-md-0
         %ul.navbar-nav.text-uppercase.ml-auto
           %li.nav-item= link_to "About", about_path, class:"nav-link"
-          %li.nav-item= link_to "Contact Us", contact_path, class:"nav-link"
+          %li.nav-item= link_to "Contact", contact_path, class:"nav-link"
           %li.nav-item= link_to "Privacy", privacy_path, class:"nav-link"
