--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,7 +12,7 @@
   %body
     .container#page-top{'data-behavior' => "vue" }'
     - unless Rails.env.production?
-      .corner-ribbon.top-right.sticky.red.shadow= link_to('Work in Progress', project_status_path)
+      -# .corner-ribbon.top-right.sticky.red.shadow= link_to('Work in Progress', project_status_path)
 
       = render 'layouts/header'
 
