--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -13,5 +13,7 @@
     = f.label :status
     = f.select :status, :collection => Post.statuses.keys.to_a
 
+  .field
+    = f.rich_text_area :content
   .actions
     = f.submit 'Save'
