--- a/app/javascript/davechmura_website/stylesheets/agency.sass
+++ b/app/javascript/davechmura_website/stylesheets/agency.sass
@@ -2,30 +2,37 @@
 @import '~bootstrap/scss/bootstrap'
 @import 'variables'
 @import 'mixins'
+
+// Global Components
 body
   overflow-x: hidden
-  @include body-font
-  webkit-tap-highlight-color: $theme-primary
+  +body-font
+
 .text-muted
   color: $gray-light
 
 .text-primary
   color: $theme-primary !important
+
 p
-  font-size: 1rem
+  font-size: 1.2rem
   line-height: 1.75
-  &.large
-    font-size: 1.2rem
+
+p.large
+  font-size: 1.2rem
+
+a, a:hover, a:focus, a:active, a.active
+  outline: none
 
 a
-  outline: none
   color: $theme-primary
-  &:hover, &:focus, &:active, &.active
-    outline: none
-    color: darken($theme-primary, 10%)
+
+a:hover, a:focus, a:active, a.active
+  color: darken($theme-primary, 10%)
 
 h1, h2, h3, h4, h5, h6
-  @include heading-font
+  +heading-font
+
   font-weight: 700
 
 .img-centered
@@ -37,52 +44,73 @@ h1, h2, h3, h4, h5, h6
 .bg-darkest-gray
   background-color: $gray-darker
 
+// Restyled Primary Buttons
+
 .btn-primary
-  @include button-variant(white, $theme-primary, $theme-primary)
-  @include heading-font
+  +button-variant(white, $theme-primary, $theme-primary)
+  +heading-font
+
   font-weight: 700
 
 .btn-xl
-  @include button-variant(white, $theme-primary, $theme-primary)
-  @include heading-font
+  +button-variant(white, $theme-primary, $theme-primary)
+  +heading-font
+
   font-weight: 700
   border-radius: 3px
   font-size: 1.8rem
   padding: 20px 40px
 
+// Custom Navigation Bar
+
 .navbar-custom
   background-color: $gray-darker
   border-color: transparent
+
   .navbar-brand
     color: $theme-primary
-    // @include script-font
-    //   &:hover, &:focus, &:active, &.active
-    //   color: darken($theme-primary, 10%)
+
+    +script-font
+
+    &:hover, &:focus, &:active, &.active
+      color: darken($theme-primary, 10%)
+
   .navbar-collapse
-    border-color: rgba(255, 255, 255, 0.98)
+    border-color: fade-out(white, 0.02)
+
   .navbar-toggle
     background-color: $theme-primary
     border-color: $theme-primary
-    @include heading-font
+
+    +heading-font
+
     color: white
     font-size: 12px
+
     &:hover, &:focus
       background-color: $theme-primary
-  .nav li a
-    @include heading-font
-    font-weight: 400
-    letter-spacing: 1px
-    color: white
-    &:hover, &:focus
-      color: $theme-primary
-      outline: none
+
+  .nav
+    li
+      a
+        +heading-font
+
+        font-weight: 400
+        letter-spacing: 1px
+        color: white
+
+        &:hover, &:focus
+          color: $theme-primary
+          outline: none
+
   .navbar-nav > .active > a
     border-radius: 0
     color: white
     background-color: $theme-primary
-    &:hover, &:focus
-      color: white
-      background-color: darken($theme-primary, 10%)
+
+  .navbar-nav > .active > a:hover, .navbar-nav > .active > a:focus
+    color: white
+    background-color: darken($theme-primary, 10%)
 
 @media (min-width: 768px)
   .navbar-custom
@@ -92,75 +120,96 @@ h1, h2, h3, h4, h5, h6
     -moz-transition: padding 0.3s
     transition: padding 0.3s
     border: none
+
     .navbar-brand
       font-size: 2em
       -webkit-transition: all 0.3s
       -moz-transition: all 0.3s
       transition: all 0.3s
+
     .navbar-nav > .active > a
       border-radius: 3px
 
 // Navbar Change on Scroll
+
 @media (min-width: 768px)
   .navbar-custom.affix
     background-color: $gray-darker
     padding: 10px 0
+
     .navbar-brand
       font-size: 1.5em
 
 header
-  background-image: asset-url("DavePics/hug_70.svg")
+  background-image: url("../images/DavePics/hug_70.svg")
   background-repeat: no-repeat
   background-attachment: scroll
   background-position: center center
-  @include background-cover
+
+  +background-cover
+
   text-align: center
   color: white
+
   .intro-text
     margin: 3rem
     padding: 5rem
     color: #2a5278
+
     .intro-lead-in
-      @include serif-font
-      @include transparent(0.7, 7)
+      +serif-font
+      +transparent(0.7, 7)
+
       font-style: italic
       font-size: 22px
       line-height: 22px
+
     .intro-heading
-      @include heading-font
-      @include transparent(0.8, 8)
+      +heading-font
+      +transparent(0.8, 8)
+
       font-weight: 700
       font-size: 50px
       line-height: 50px
       margin-bottom: 25px
 
 @media (min-width: 768px)
-  header .intro-text
-    padding-top: 300px
-    padding-bottom: 200px
-    .intro-lead-in
-      @include serif-font
-      font-style: italic
-      font-size: 40px
-      line-height: 40px
-      margin-bottom: 25px
-    .intro-heading
-      @include heading-font
-      font-weight: 700
-      font-size: 75px
-      line-height: 75px
-      margin-bottom: 50px
+  header
+    .intro-text
+      padding-top: 300px
+      padding-bottom: 200px
+
+      .intro-lead-in
+        +serif-font
+
+        font-style: italic
+        font-size: 40px
+        line-height: 40px
+        margin-bottom: 25px
+
+      .intro-heading
+        +heading-font
+
+        font-weight: 700
+        font-size: 75px
+        line-height: 75px
+        margin-bottom: 50px
 
 // Global Section Styles
+
 section
   padding: 100px 0
+
   h2.section-heading
     font-size: 3rem
     margin-top: 0
     margin-bottom: 15px
+
   h3.section-subheading
     font-size: 16px
-    @include serif-font
+
+    +serif-font
+
     text-transform: none
     font-style: italic
     font-weight: 400
@@ -179,16 +228,20 @@ section
 // Portfolio Section
 
 #portfolio
+  img
+    @include make-col(12)
   .portfolio-item
     margin: 0 0 15px
     right: 0
+
     .portfolio-link
       display: block
       position: relative
       max-width: 400px
       margin: 0 auto
+
       .portfolio-hover
-        background: fade-out($theme-primary, .9)
+        background: fade-out($theme-primary, 0.9)
         position: absolute
         width: 100%
         height: 100%
@@ -196,8 +249,10 @@ section
         transition: all ease 0.5s
         -webkit-transition: all ease 0.5s
         -moz-transition: all ease 0.5s
+
         &:hover
           opacity: 1
+
         .portfolio-hover-content
           position: absolute
           width: 100%
@@ -207,30 +262,38 @@ section
           top: 50%
           margin-top: -12px
           color: white
+
           i
             margin-top: -12px
+
           h3, h4
             margin: 0
+
     .portfolio-caption
       max-width: 400px
       margin: 0 auto
       background-color: white
       text-align: center
       padding: 25px
+
       h4
         text-transform: none
         margin: 0
+
       p
-        @include serif-font
+        +serif-font
+
         font-style: italic
         font-size: 16px
         margin: 0
+
   *
     z-index: 2
 
 @media (min-width: 767px)
-  #portfolio .portfolio-item
-    margin: 0 0 30px
+  #portfolio
+    .portfolio-item
+      margin: 0 0 30px
 
 // Timeline
 
@@ -238,6 +301,7 @@ section
   list-style: none
   padding: 0
   position: relative
+
   &:before
     top: 0
     bottom: 0
@@ -247,33 +311,38 @@ section
     background-color: #f1f1f1
     left: 40px
     margin-left: -1.5px
+
   > li
     margin-bottom: 50px
     position: relative
     min-height: 50px
-    &:before
+
+    &:before, &:after
       content: " "
       display: table
+
     &:after
-      content: " "
-      display: table
       clear: both
+
     .timeline-panel
       width: 100%
       float: right
       padding: 0 20px 0 100px
       position: relative
       text-align: left
+
       &:before
         border-left-width: 0
         border-right-width: 15px
         left: -15px
         right: auto
+
       &:after
         border-left-width: 0
         border-right-width: 14px
         left: -14px
         right: auto
+
     .timeline-image
       left: 0
       margin-left: 0
@@ -286,112 +355,148 @@ section
       border-radius: 100%
       border: 7px solid #f1f1f1
       text-align: center
+
       h4
         font-size: 10px
         margin-top: 12px
         line-height: 14px
+
     &.timeline-inverted > .timeline-panel
       float: right
       text-align: left
       padding: 0 20px 0 100px
+
       &:before
         border-left-width: 0
         border-right-width: 15px
         left: -15px
         right: auto
+
       &:after
         border-left-width: 0
         border-right-width: 14px
         left: -14px
         right: auto
+
     &:last-child
       margin-bottom: 0
-  .timeline-heading h4
-    margin-top: 0
-    color: inherit
-    &.subheading
-      text-transform: none
-  .timeline-body >
-    p, ul
+
+  .timeline-heading
+    h4
+      margin-top: 0
+      color: inherit
+
+      &.subheading
+        text-transform: none
+
+  .timeline-body
+    > p, > ul
       margin-bottom: 0
 
 @media (min-width: 768px)
   .timeline
     &:before
       left: 50%
+
     > li
       margin-bottom: 100px
       min-height: 100px
+
       .timeline-panel
         width: 41%
         float: left
         padding: 0 20px 20px 30px
         text-align: right
+
       .timeline-image
         width: 100px
         height: 100px
         left: 50%
         margin-left: -50px
+
         h4
           font-size: 13px
           margin-top: 16px
           line-height: 18px
+
       &.timeline-inverted > .timeline-panel
         float: right
         text-align: left
         padding: 0 30px 20px 20px
 
 @media (min-width: 992px)
-  .timeline > li
-    min-height: 150px
-    .timeline-panel
-      padding: 0 20px 20px
-    .timeline-image
-      width: 150px
-      height: 150px
-      margin-left: -75px
-      h4
-        font-size: 18px
-        margin-top: 30px
-        line-height: 26px
-    &.timeline-inverted > .timeline-panel
-      padding: 0 20px 20px
+  .timeline
+    > li
+      min-height: 150px
+
+      .timeline-panel
+        padding: 0 20px 20px
+
+      .timeline-image
+        width: 150px
+        height: 150px
+        margin-left: -75px
+
+        h4
+          font-size: 18px
+          margin-top: 30px
+          line-height: 26px
+
+      &.timeline-inverted > .timeline-panel
+        padding: 0 20px 20px
 
 @media (min-width: 1200px)
-  .timeline > li
-    min-height: 170px
-    .timeline-panel
-      padding: 0 20px 20px 100px
-    .timeline-image
-      width: 170px
-      height: 170px
-      margin-left: -85px
-      h4
-        margin-top: 40px
-    &.timeline-inverted > .timeline-panel
-      padding: 0 100px 20px 20px
+  .timeline
+    > li
+      min-height: 170px
+
+      .timeline-panel
+        padding: 0 20px 20px 100px
+
+      .timeline-image
+        width: 170px
+        height: 170px
+        margin-left: -85px
+
+        h4
+          margin-top: 40px
+
+      &.timeline-inverted > .timeline-panel
+        padding: 0 100px 20px 20px
 
 // Skills Section
+.skill-item
+  @include make-col(4)
+  padding: 2rem
+  font-size: 3rem
+
 
 // END Skills Section
+
 // Team Section
 
 .team-member
   text-align: center
   margin-bottom: 50px
+  // @include rounded-circle
+
   img
     margin: 0 auto
     border: 7px solid white
+
   h4
     margin-top: 25px
     margin-bottom: 0
     text-transform: none
+
   p
     margin-top: 0
+
 // Clients Aside
 
-aside.clients img
-  margin: 50px auto
+aside.clients
+  img
+    margin: 50px auto
 
 // Contact Section
 
@@ -400,32 +505,52 @@ section#contact
   // background-image: url("../img/map-image.png")
   background-position: center
   background-repeat: no-repeat
+
   .section-heading
     color: white
+
   .form-group
     margin-bottom: 25px
+
     input, textarea
       padding: 20px
+
     input.form-control
       height: auto
+
     textarea.form-control
       height: 236px
+
   .form-control:focus
     border-color: $theme-primary
     box-shadow: none
+
   \::-webkit-input-placeholder
-    @include heading-font
+    +heading-font
+
     font-weight: 700
     color: $gray-lighter
+
   \:-moz-placeholder
     /* Firefox 18-
-    @include heading-font
+    +heading-font
+
     font-weight: 700
     color: $gray-lighter
+
+  \::-moz-placeholder
+    /* Firefox 19+
+    +heading-font
+
+    font-weight: 700
+    color: $gray-lighter
+
   \:-ms-input-placeholder
-    @include heading-font
+    +heading-font
+
     font-weight: 700
     color: $gray-lighter
+
   .text-danger
     color: $theme-danger
 
@@ -434,45 +559,54 @@ section#contact
 footer
   padding: 25px 0
   text-align: center
+
   span.copyright
     line-height: 40px
-    @include heading-font
+
+    +heading-font
+
     text-transform: none
+
   ul.quicklinks
     margin-bottom: 0
     line-height: 40px
-    @include heading-font
+
+    +heading-font
+
     text-transform: none
 
 // Social Buttons
 
 ul.social-buttons
   margin-bottom: 0
-  li a
-    display: block
-    background-color: $gray-darker
-    height: 40px
-    width: 40px
-    border-radius: 100%
-    font-size: 20px
-    line-height: 40px
-    color: white
-    outline: none
-    -webkit-transition: all 0.3s
-    -moz-transition: all 0.3s
-    transition: all 0.3s
-    &:hover, &:focus, &:active
-      background-color: $theme-primary
 
-.btn
-  &:focus, &:active, &.active, &:active:focus
-    outline: none
+  li
+    a
+      display: block
+      background-color: $gray-darker
+      height: 40px
+      width: 40px
+      border-radius: 100%
+      font-size: 20px
+      line-height: 40px
+      color: white
+      outline: none
+      -webkit-transition: all 0.3s
+      -moz-transition: all 0.3s
+      transition: all 0.3s
+
+      &:hover, &:focus, &:active
+        background-color: $theme-primary
+
+.btn:focus, .btn:active, .btn.active, .btn:active:focus
+  outline: none
 
 .portfolio-modal
   .modal-dialog
     margin: 0
     height: 100%
     width: auto
+
   .modal-content
     border-radius: 0
     background-clip: border-box
@@ -483,21 +617,29 @@ ul.social-buttons
     width: 600px
     padding: 100px 0
     text-align: center
+
     h2
       margin-bottom: 15px
       font-size: 3em
+
     p
       margin-bottom: 30px
-      &.item-intro
-        margin: 20px 0 30px
-        @include serif-font
-        font-style: italic
-        font-size: 16px
+
+    p.item-intro
+      margin: 20px 0 30px
+
+      +serif-font
+
+      font-style: italic
+      font-size: 16px
+
     ul.list-inline
       margin-bottom: 30px
       margin-top: 0
+
     img
       margin-bottom: 30px
+
   .close-modal
     position: absolute
     width: 75px
@@ -506,8 +648,10 @@ ul.social-buttons
     top: 25px
     right: 25px
     cursor: pointer
+
     &:hover
       opacity: 0.3
+
     .lr
       height: 75px
       width: 1px
@@ -515,28 +659,46 @@ ul.social-buttons
       background-color: $gray-darker
       transform: rotate(45deg)
       -ms-transform: rotate(45deg)
+
       /* IE 9
       -webkit-transform: rotate(45deg)
+
       /* Safari and Chrome
       z-index: 1051
+
       .rl
         height: 75px
         width: 1px
         background-color: $gray-darker
         transform: rotate(90deg)
         -ms-transform: rotate(90deg)
+
         /* IE 9
         -webkit-transform: rotate(90deg)
+
         /* Safari and Chrome
         z-index: 1052
+
   .modal-backdrop
     opacity: 0
     display: none
+    z-index: -1
 
-\::-moz-selection, ::selection
+
+// Highlight Color Customization
+\::-moz-selection
   text-shadow: none
   background: $theme-primary
 
-img
-  &::selection, &::-moz-selection
-    background: transparent
+\::selection
+  text-shadow: none
+  background: $theme-primary
+
+img::selection
+  background: transparent
+
+img::-moz-selection
+  background: transparent
+
+body
+  webkit-tap-highlight-color: $theme-primary
