--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -18,7 +18,7 @@
 
 
 
-%footer.sticky-bottom.bg-dark
+%footer.fixed-bottom.bg-dark
   .d-flex.flex-row.justify-content-between.align-items-center
     .footer-logo
       -# = link_to image_tag("#{sitename}Logo.png", class: 'navbar-brand navbar-logo', alt: "#{sitename} Logo, link to home page."), root_path
