--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,15 +10,15 @@
       = yield :head
 
   %body
-    .container#page-top{'data-behavior' => "vue" }'
+    .container#page-top
     - unless Rails.env.production?
-      -# .corner-ribbon.top-right.sticky.red.shadow= link_to('Work in Progress', project_status_path)
+      .corner-ribbon.top-right.sticky.red.shadow= link_to('Work in Progress', project_status_path)
 
       = render 'layouts/header'
 
       .content#content{:class => controller.controller_name}
         = yield
 
-      = debug(params) if Rails.env.development?
+        = debug(params) if Rails.env.development?
 
       = render 'layouts/footer'
