--- a/app/javascript/davechmura_website/stylesheets/application.sass
+++ b/app/javascript/davechmura_website/stylesheets/application.sass
@@ -23,6 +23,8 @@ img[alt=""], img:not([alt])
 // .content
 //   grid-column: span 12
 //   padding:  0 2rem
+.content
+  margin: 3rem 1rem 0 1rem
 
 .debug_dump
   grid-column: span 12
