--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,8 +15,10 @@
       .corner-ribbon.top-right.sticky.red.shadow= link_to('Work in Progress', project_status_path)
 
       = render 'layouts/header'
+      = render 'layouts/flash_messages'
 
       .content#content{:class => controller.controller_name}
+      
         = yield
 
         = debug(params) if Rails.env.development?
