--- a/app/javascript/davechmura_website/stylesheets/agency.sass
+++ b/app/javascript/davechmura_website/stylesheets/agency.sass
@@ -145,6 +145,7 @@ header
   background-repeat: no-repeat
   background-attachment: scroll
   background-position: center center
+  margin: 0
 
   +background-cover
 
