--- a/app/views/layouts/_flash_messages.html.haml
+++ b/app/views/layouts/_flash_messages.html.haml
@@ -3,3 +3,8 @@
     %div{:class => "#{flash_class(key)} fade in"}
       %a.close{"data-dismiss" => "alert", :href => "#"} ×
       = value
+
+
+= notice
+= alert
+-# = console
