--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -28,6 +28,11 @@
         %li.nav-item= link_to 'About', about_path, class:'nav-link'
         %li.nav-item= link_to 'Contact Us', contact_path, class:'nav-link'
         %li.nav-item= link_to 'Privacy Policy', privacy_path, class:'nav-link'
+
+        - if user_signed_in?
+          %li.nav-item= link_to('Sign Out', destroy_user_session_path, method: :delete, class:'nav-link')
+        - else
+          %li.nav-item= link_to('Login', new_user_session_path, class:'nav-link')
       .footer-copyright.text-center
         = link_to "© 2018 - Copyright #{(t :sitename)}, All Rights Reserved", about_path
     .footer-contact
