--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -22,7 +22,7 @@
 
         %li.nav-item= link_to 'Skills', root_path(anchor: 'skills'), class: 'nav-link page-scroll'
         -# %li.nav-item= link_to 'Services', root_path(anchor: 'services'), class: 'nav-link page-scroll'
-        %li.nav-item= link_to 'Portfolio', root_path(anchor: 'portfolio'), class: 'nav-link page-scroll'
+        -# %li.nav-item= link_to 'Portfolio', root_path(anchor: 'portfolio'), class: 'nav-link page-scroll'
         -# %li.nav-item= link_to 'Resume', resume_path, class: 'nav-link page-scroll'
         %li.nav-item= link_to 'Roles', root_path(anchor: 'team'), class: 'nav-link page-scroll'
         -# %li.nav-item= link_to 'Contact Local', root_path(anchor: 'contact'), class: 'nav-link page-scroll'
