UPDATE: User Experience text

--- a/app/views/pages/_skills.html.haml
+++ b/app/views/pages/_skills.html.haml
@@ -17,12 +17,12 @@
         .skill-item
           %i.fas.fa-laptop
           %h4 User Experience
-          %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
+          %p I love users and I really want my users to have a good time. From the first time a user encounters one of my applications or solutions through their use of it, I am focussed on empowering the user, reducing friction and bringing delight to the experience.
         .skill-item
           %i.fas.fa-code
           %h4 Code
           %p I see writing code as a craft and am constantly seeking mastery. I develop standards compliant code that is written to be readable, understandable, tested, and maintainable. This is what good software is all about.
-      .row.text-center
+
         .skill-item
           %i.fas.fa-graduation-cap
           %h4 Teaching / Mentorship
