UPDATE: Styles to add breakpoints for landing page

--- a/app/javascript/davechmura_website/stylesheets/application.sass
+++ b/app/javascript/davechmura_website/stylesheets/application.sass
@@ -25,7 +25,38 @@ img[alt=""], img:not([alt])
 //   padding:  0 2rem
 .content
   // padding: 1rem
+  position: relative
+  top: 75px
 
+
+
+
+@include media-breakpoint-up(xs)
+  header
+    position: relative
+    top: -51px
+  .skill-item
+    @include make-col(12)
+    padding: 1rem
+    font-size: 1.5rem
+@include media-breakpoint-up(md)
+  header
+    position: relative
+    top: -40px
+  // Skills Section
+  .skill-item
+    @include make-col(6)
+    padding: 2rem
+    font-size: 2rem
+@include media-breakpoint-up(lg)
+  header
+    position: relative
+    top: -40px
+  // Skills Section
+  .skill-item
+    @include make-col(4)
+    padding: 2rem
+    font-size: 3rem
 
 .debug_dump
   grid-column: span 12
