UPDATE: minor content tweeks

--- a/app/javascript/davechmura_website/stylesheets/agency.sass
+++ b/app/javascript/davechmura_website/stylesheets/agency.sass
@@ -199,7 +199,7 @@ header
 // Global Section Styles
 
 section
-  padding: 100px 0
+  padding: 1rem 0
 
   h2.section-heading
     font-size: 3rem
@@ -218,7 +218,7 @@ section
 
 @media (min-width: 768px)
   section
-    padding: 150px 0
+    padding: 1rem 0
 
 // Services Section
 
