--- a/app/views/pages/_skills.html.haml
+++ b/app/views/pages/_skills.html.haml
@@ -33,5 +33,5 @@
           %p Bringing your product successfully to market requires more than 'management', it requires vision. Coordinating the various aspects of a successful launch can be daunting. I have brought several products to fruition. From conception, design, user testing, coding, marketing, distribution and support.
         .skill-item
           %i.fas.fa-child
-          %h4 I like puns n fun
+          %h4 I have fun w/ puns
           %p I find puns enjoyable. I also enjoy fun, long walks on moonlit beach and tacos. Friday's are for sending hugs on the internets.
