--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,13 +1,20 @@
 %p#notice= notice
 
-%p
-  %b Title:
-  = @post.title
+%h1= @post.title
 %p
   %b Status:
   = @post.status
 
+  %b Author:
+  = @post.user.email
 
-= link_to 'Edit', edit_post_path(@post)
-\|
-= link_to 'Back', posts_path
+%p
+  .trix-content= @post.content
+
+
+
+-# = link_to 'Edit', edit_post_path(@post)
+-# \|
+-# = link_to 'Back', posts_path
+= link_to 'Edit', edit_post_path(@post) if policy(@post).update?
+= link_to 'Delete', post_path(@post), method: :delete if policy(@post).destroy?
