UPDATE: Signout text to include user email.

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -30,7 +30,7 @@
         %li.nav-item= link_to 'Privacy Policy', privacy_path, class:'nav-link'
 
         - if user_signed_in?
-          %li.nav-item= link_to('Sign Out', destroy_user_session_path, method: :delete, class:'nav-link')
+          %li.nav-item= link_to("Log #{current_user.email} out.", destroy_user_session_path, method: :delete, class:'nav-link')
         - else
           %li.nav-item= link_to('Login', new_user_session_path, class:'nav-link')
       .footer-copyright.text-center
