UPDATE: minor tweeks

--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -1,2 +1,18 @@
 %h1 Pages#about
 %p Find me in app/views/pages/about.html.haml
+
+-# %footer#footer.section{:role => "banner"}
+-#   %div
+-#     .logo
+-#       %a{:href => "http://www.everywhereist.com"}
+-#         %img{:alt => "The Everywhereist", :src => "http://www.everywhereist.com/wp-content/themes/everywhereist-v3/images/logo.svg"}/
+-#     %nav
+-#       %ul.list-inline
+-#         %li.list-inline-item
+-#           %a{:href => "http://www.everywhereist.com/all-over-the-place/"} The Book
+-#         %li.list-inline-item
+-#           %a{:href => "http://www.everywhereist.com/blog/"} The Blog
+-#         %li.list-inline-item
+-#           %a{:href => "http://www.everywhereist.com/about/"} About Me
+-#         %li.list-inline-item
+-#           %a{:href => "http://www.everywhereist.com/travel-guides/"} Travel Guides
