--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -6,8 +6,8 @@
 - @posts.each do |post|
   .well
     .media
-      %a.pull-left{:href => "#"}
-        %img.media-object{:src => "http://placekitten.com/150/150", :alt => 'Kitteh'}
+      -# %a.pull-left{:href => "#"}
+      -#   %img.media-object{:src => "http://placekitten.com/150/150", :alt => 'Kitteh'}
       .media-body
         %h4.media-heading
           = link_to post.title, post
