--- a/app/javascript/davechmura_website/stylesheets/application.sass
+++ b/app/javascript/davechmura_website/stylesheets/application.sass
@@ -8,7 +8,7 @@
   z-index: -1 !important
 
 // You Forgot The Alt Message
-img[alt=""], img:not([alt])
+img[alt=""] img:not([alt])
   border: 5px dashed #c00
 
 // .container
@@ -27,6 +27,7 @@ img[alt=""], img:not([alt])
   // padding: 1rem
   position: relative
   top: 75px
+  height: auto
 
 
 
