--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -29,6 +29,6 @@
         %li.nav-item= link_to 'Blog', posts_path, class: 'nav-link'
       .nav.my-2.my-md-0
         %ul.navbar-nav.text-uppercase.ml-auto
-          %li.nav-item= link_to "About", about_path, class:"nav-link"
-          %li.nav-item= link_to "Contact", contact_path, class:"nav-link"
-          %li.nav-item= link_to "Privacy", privacy_path, class:"nav-link"
+          -# -# %li.nav-item= link_to "About", about_path, class:"nav-link"
+          -# %li.nav-item= link_to "Contact", contact_path, class:"nav-link"
+          -# %li.nav-item= link_to "Privacy", privacy_path, class:"nav-link"
