--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -25,8 +25,8 @@
       = link_to (t :sitename), root_path, class:'navbar-brand'
     .footer-links
       %ul.navbar-nav.flex-row.justify-content-around
-        %li.nav-item= link_to 'About', about_path, class:'nav-link'
-        %li.nav-item= link_to 'Contact Us', contact_path, class:'nav-link'
+        -# %li.nav-item= link_to 'About', about_path, class:'nav-link'
+        -# %li.nav-item= link_to 'Contact Us', contact_path, class:'nav-link'
         %li.nav-item= link_to 'Privacy Policy', privacy_path, class:'nav-link'
 
 
@@ -37,4 +37,4 @@
       .footer-copyright.text-center
         = link_to "© 2018 - Copyright #{(t :sitename)}, All Rights Reserved", about_path
     .footer-contact
-    = render 'feedback/feedback'
+      = render 'feedback/feedback'
