REMOVE: Feedback button from footer

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -37,4 +37,4 @@
       .footer-copyright.text-center
         = link_to "© 2018 - Copyright #{(t :sitename)}, All Rights Reserved", about_path
     .footer-contact
-      = render 'feedback/feedback'
+      -# = render 'feedback/feedback'
