--- a/app/javascript/davechmura_website/stylesheets/_footer.sass
+++ b/app/javascript/davechmura_website/stylesheets/_footer.sass
@@ -1,86 +1,90 @@
 @import 'variables'
-
-footer
-  display: grid
-  grid-column: span 12
-  grid-template-columns: auto auto auto
-  justify-content: space-between
-  align-items: center
-  text-align: center
-  height: 90px
-  background-color: $footer-background
-  list-style: none
-
-.footer-logo
-  display: grid
-  grid-template-columns: [image] auto [sitename] auto
-  align-items: center
-  text-align: center
-  margin-left: 1rem
-  img
-    height: 35px
-    border-radius: 35px
-  a
-    color: $footer-link-color
-    text-decoration: none
-  .sitename
-    font-size: 1.5rem
-    margin: 0 0 0 0.5rem
-
-.footer-links
-  display: grid
-  grid-template-rows: auto 1rem
-  font-size: 0.9rem
-  a
-    text-decoration: none
-    color: $footer-link-color
-    &:focus,
-    &:hover
-      color: transparentize($footer-color, 0.2)
-
-.footer-site-links
-  display: grid
-  grid-template-columns: auto auto auto
-  justify-content: stretch
-  padding-bottom: 0.5rem
-  li
-    padding: 0 1rem 0 1rem
-
-.footer-social
-  padding: 0 2rem 0 0
-  color: $footer-link-color
-
-.footer-copyright
-  align-items: center
-  text-align: center
-
-// Screen width smaller than 600px
-@media screen and (max-width : 600px)
-  footer
-    height: 200px
-    background-color: transparentize($navbarBackground, 0.5)
-
-  .footer-logo
-    grid-column: span 12
-    justify-content: center
-    .sitename
-      display: none
-
-  .footer-links
-    display: grid
-    grid-column: span 12
-    grid-template-columns: auto auto auto
-    justify-content: center
-
-  .footer-site-links
-    padding: 0
-
-  .footer-social
-    grid-column: span 12
-    padding-top: 0
-
-  .footer-copyright
-    grid-column: span 12
-    align-items: center
-    text-align: center
-    justify-content: center
+.social
+  @apply .flex .items-center .justify-center .text-grey-darker .font-semibold .border-2 .text-xs .border-blue .rounded-full .mx-1 .h-8 .w-8 bg-blue-lightest
+  &:hover
+    @apply .bg-blue-lighter
+    color: white
+// footer
+//   display: grid
+//   grid-column: span 12
+//   grid-template-columns: auto auto auto
+//   justify-content: space-between
+//   align-items: center
+//   text-align: center
+//   height: 90px
+//   background-color: $footer-background
+//   list-style: none
+//
+// .footer-logo
+//   display: grid
+//   grid-template-columns: [image] auto [sitename] auto
+//   align-items: center
+//   text-align: center
+//   margin-left: 1rem
+//   img
+//     height: 35px
+//     border-radius: 35px
+//   a
+//     color: $footer-link-color
+//     text-decoration: none
+//   .sitename
+//     font-size: 1.5rem
+//     margin: 0 0 0 0.5rem
+//
+// .footer-links
+//   display: grid
+//   grid-template-rows: auto 1rem
+//   font-size: 0.9rem
+//   a
+//     text-decoration: none
+//     color: $footer-link-color
+//     &:focus,
+//     &:hover
+//       color: transparentize($footer-color, 0.2)
+//
+// .footer-site-links
+//   display: grid
+//   grid-template-columns: auto auto auto
+//   justify-content: stretch
+//   padding-bottom: 0.5rem
+//   li
+//     padding: 0 1rem 0 1rem
+//
+// .footer-social
+//   padding: 0 2rem 0 0
+//   color: $footer-link-color
+//
+// .footer-copyright
+//   align-items: center
+//   text-align: center
+//
+// // Screen width smaller than 600px
+// @media screen and (max-width : 600px)
+//   footer
+//     height: 200px
+//     background-color: transparentize($navbarBackground, 0.5)
+//
+//   .footer-logo
+//     grid-column: span 12
+//     justify-content: center
+//     .sitename
+//       display: none
+//
+//   .footer-links
+//     display: grid
+//     grid-column: span 12
+//     grid-template-columns: auto auto auto
+//     justify-content: center
+//
+//   .footer-site-links
+//     padding: 0
+//
+//   .footer-social
+//     grid-column: span 12
+//     padding-top: 0
+//
+//   .footer-copyright
+//     grid-column: span 12
+//     align-items: center
+//     text-align: center
+//     justify-content: center
