--- a/app/javascript/davechmura_website/stylesheets/_footer.sass
+++ b/app/javascript/davechmura_website/stylesheets/_footer.sass
@@ -1,3 +1,6 @@
+@tailwind preflight
+@tailwind components
+@tailwind utilities
 @import 'variables'
 .social
   @apply .flex .items-center .justify-center .text-grey-darker .font-semibold .border-2 .text-xs .border-blue .rounded-full .mx-1 .h-8 .w-8 bg-blue-lightest
