--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,26 +1,24 @@
-%h1 Listing posts
-
 
 -# = link_to 'New Post', new_post_path if policy(@post).new?
+.mt-20
+  - @posts.each do |post|
+    .well.mb-6
+      .media
+        -# %a.pull-left{:href => "#"}
+        -#   %img.media-object{:src => "http://placekitten.com/150/150", :alt => 'Kitteh'}
+        .media-body.w-full
+          %h4.media-heading
+            = link_to post.title, post
+            = '(unpublished)' unless post.published?
+          %p.text-sm.text-grey-dark.float-right
+            By: #{post.user.email}
+          .truncated-post= post.content
 
-- @posts.each do |post|
-  .well
-    .media
-      -# %a.pull-left{:href => "#"}
-      -#   %img.media-object{:src => "http://placekitten.com/150/150", :alt => 'Kitteh'}
-      .media-body
-        %h4.media-heading
-          = link_to post.title, post
-          = '(unpublished)' unless post.published?
-        %p.tex.t-right
-          By #{post.user.email}
-        .truncated-post.w-100= post.content
-        %ul.list-inline.list-unstyled
-          %li
-            %span
-              %i.glyphicon.glyphicon-calendar
-              = time_ago_in_words post.created_at
-              ago
-
-        = link_to 'Edit | ', edit_post_path(post) if policy(post).update?
-        = link_to 'Read More', post
+          .text-sm.text-grey-darker.bg-grey-lighter.mt-3
+            %i.far.fa-calendar-alt
+            Published:
+            = time_ago_in_words post.created_at
+            ago
+          .post-index-actions.text-xs.float-right.-mt-5
+            = link_to 'Edit | ', edit_post_path(post) if policy(post).update?
+            = link_to 'Read More', post
