--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -1,18 +1,12 @@
-%h1 Pages#about
-%p Find me in app/views/pages/about.html.haml
+%h1.pt-3 What the ?!&#!
 
--# %footer#footer.section{:role => "banner"}
--#   %div
--#     .logo
--#       %a{:href => "http://www.everywhereist.com"}
--#         %img{:alt => "The Everywhereist", :src => "http://www.everywhereist.com/wp-content/themes/everywhereist-v3/images/logo.svg"}/
--#     %nav
--#       %ul.list-inline
--#         %li.list-inline-item
--#           %a{:href => "http://www.everywhereist.com/all-over-the-place/"} The Book
--#         %li.list-inline-item
--#           %a{:href => "http://www.everywhereist.com/blog/"} The Blog
--#         %li.list-inline-item
--#           %a{:href => "http://www.everywhereist.com/about/"} About Me
--#         %li.list-inline-item
--#           %a{:href => "http://www.everywhereist.com/travel-guides/"} Travel Guides
+%p
+  What is this? Why is this? Who the hell is this and what do you want with my attention?!?
+
+%p
+  I have no idea. This is a little toy I am playing with, but also using to invest in my learning, understanding and overall craft.
+
+%p
+  So, I really have no idea. And I am purposfully avoiding 'justifying' my efforts here. This is my studio. If
+  = link_to 'Norman', 'https://www.nrm.org/studio/', target: '_blank'
+  can have one, well damnit, so can I!
