--- a/app/javascript/davechmura_website/stylesheets/agency.sass
+++ b/app/javascript/davechmura_website/stylesheets/agency.sass
@@ -140,7 +140,7 @@ h1, h2, h3, h4, h5, h6
     .navbar-brand
       font-size: 1.5em
 
-header
+.mast-header
   background-image: url("../images/DavePics/hug_70.svg")
   background-repeat: no-repeat
   background-attachment: scroll
@@ -175,7 +175,7 @@ header
       margin-bottom: 25px
 
 @media (min-width: 768px)
-  header
+  .mast-header
     .intro-text
       padding-top: 300px
       padding-bottom: 200px
