--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,34 +1,44 @@
+-# %header.pin-t.flex.mb-4
+-#   .logo
+-#     = link_to image_tag(asset_pack_path('davechmura_website/images/DavePics/hug.jpg'), alt: "#{(t :sitename)} Logo, link to home page.", class: 'header-logo ', id: root_path(anchor: 'page-top')), root_path
+-#     -# .sitename= link_to (t :sitename), root_path
+-#   %nav.header-nav.float-right.-mt-10
+-#     = link_to "About", about_path
+-#     = link_to "Contact Me", contact_path
+-#     = link_to "Privacy", privacy_path
+
+
+%header.pin-t.flex.mb-4
+  .h-12{:class => "w-1/2 sm:w-full"}
+    = link_to image_tag(asset_pack_path('davechmura_website/images/DavePics/hug.jpg'), alt: "#{(t :sitename)} Logo, link to home page.", class: 'header-logo ', id: root_path(anchor: 'page-top')), root_path
+
+  .header-nav.flex-row.h-12{:class => "w-1/2 sm:w-full"}
+    = link_to "Contact Me", contact_path
+    = link_to "About", about_path
+
+    -# = link_to "Privacy", privacy_path
+
 -# %header
--#   .header-logo
--#     = link_to image_tag(asset_pack_path('davechmura_website/images/DavePics/hug.jpg'), alt: "#{(t :sitename)} Logo, link to home page.", class: ' header-logo', id: root_path(anchor: 'page-top')), root_path
--#     .sitename= link_to (t :sitename), root_path
--#   %nav
--#     %ul
--#       %li= link_to "About", about_path
--#       %li= link_to "Contact Me", contact_path
--#       %li= link_to "Privacy", privacy_path
-
-%header
-  / Navigation
-  %nav#mainNav.navbar.fixed-top.navbar-expand-md.navbar-dark.bg-dark.mb-4
-    %button.navbar-toggler{"aria-controls" => "navbarCollapse", "aria-expanded" => "false", "aria-label" => "Toggle navigation", "data-target" => "#navbarCollapse", "data-toggle" => "collapse", :type => "button"}
-      %span.navbar-toggler-icon
-
-    #navbarCollapse.collapse.navbar-collapse
-      %ul.navbar-nav.mr-auto.text-uppercase
-        %li.nav-item
-          = link_to (t :sitename), root_path, class: 'navbar-brand', id: root_path(anchor: 'page-top')
-          %span.sr-only (current)
-
-        %li.nav-item= link_to 'Skills', root_path(anchor: 'skills'), class: 'nav-link page-scroll'
-        -# %li.nav-item= link_to 'Services', root_path(anchor: 'services'), class: 'nav-link page-scroll'
-        -# %li.nav-item= link_to 'Portfolio', root_path(anchor: 'portfolio'), class: 'nav-link page-scroll'
-        -# %li.nav-item= link_to 'Resume', resume_path, class: 'nav-link page-scroll'
-        %li.nav-item= link_to 'Roles', root_path(anchor: 'team'), class: 'nav-link page-scroll'
-        -# %li.nav-item= link_to 'Contact Local', root_path(anchor: 'contact'), class: 'nav-link page-scroll'
-        %li.nav-item= link_to 'Blog', posts_path, class: 'nav-link'
-      .nav.my-2.my-md-0
-        %ul.navbar-nav.text-uppercase.ml-auto
-          -# -# %li.nav-item= link_to "About", about_path, class:"nav-link"
-          -# %li.nav-item= link_to "Contact", contact_path, class:"nav-link"
-          -# %li.nav-item= link_to "Privacy", privacy_path, class:"nav-link"
+-#   / Navigation
+-#   %nav#mainNav.navbar.fixed-top.navbar-expand-md.navbar-dark.bg-dark.mb-4
+-#     %button.navbar-toggler{"aria-controls" => "navbarCollapse", "aria-expanded" => "false", "aria-label" => "Toggle navigation", "data-target" => "#navbarCollapse", "data-toggle" => "collapse", :type => "button"}
+-#       %span.navbar-toggler-icon
+-#
+-#     #navbarCollapse.collapse.navbar-collapse
+-#       %ul.navbar-nav.mr-auto.text-uppercase
+-#         %li.nav-item
+-#           = link_to (t :sitename), root_path, class: 'navbar-brand', id: root_path(anchor: 'page-top')
+-#           %span.sr-only (current)
+-#
+-#         %li.nav-item= link_to 'Skills', root_path(anchor: 'skills'), class: 'nav-link page-scroll'
+-#         -# %li.nav-item= link_to 'Services', root_path(anchor: 'services'), class: 'nav-link page-scroll'
+-#         -# %li.nav-item= link_to 'Portfolio', root_path(anchor: 'portfolio'), class: 'nav-link page-scroll'
+-#         -# %li.nav-item= link_to 'Resume', resume_path, class: 'nav-link page-scroll'
+-#         %li.nav-item= link_to 'Roles', root_path(anchor: 'team'), class: 'nav-link page-scroll'
+-#         -# %li.nav-item= link_to 'Contact Local', root_path(anchor: 'contact'), class: 'nav-link page-scroll'
+-#         %li.nav-item= link_to 'Blog', posts_path, class: 'nav-link'
+-#       .nav.my-2.my-md-0
+-#         %ul.navbar-nav.text-uppercase.ml-auto
+-#           -# -# %li.nav-item= link_to "About", about_path, class:"nav-link"
+-#           -# %li.nav-item= link_to "Contact", contact_path, class:"nav-link"
+-#           -# %li.nav-item= link_to "Privacy", privacy_path, class:"nav-link"
