--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,6 +1,6 @@
 
 / Header
-%header
+.mast-header.-mx-16.-mt-12
 
   .intro-text
     .intro-lead-in Chief Instigator, passionate developer, mentor.
