--- a/app/javascript/davechmura_website/stylesheets/application.sass
+++ b/app/javascript/davechmura_website/stylesheets/application.sass
@@ -12,8 +12,11 @@
 // You Forgot The Alt Message
 img[alt=""] img:not([alt])
   border: 5px dashed #c00
+
+body
+  @apply flex flex-col h-full
 .content
-  @apply -my-6 px-6
+  @apply -my-6 px-6 mx-auto
 
 // .container
 //   display: grid
