UPDATE: height settings for header and footer.

--- a/app/javascript/davechmura_website/stylesheets/_header.sass
+++ b/app/javascript/davechmura_website/stylesheets/_header.sass
@@ -10,11 +10,12 @@
 
 header
   @apply .bg-grey-darker .py-2
-
+  min-height: 3.5rem
 .header-logo
   @apply .w-12 .h-12 .rounded-full .ml-3
 
 .header-nav
+
   a
     @apply .float-right .mx-4 .text-blue-lightest .mt-3
     &:hover
