--- a/app/views/pages/contact.html.haml
+++ b/app/views/pages/contact.html.haml
@@ -1,6 +1,6 @@
 .text-center.contact-us--form
   %h3.heading-style-1.text-center.text-uppercase.text-weight-normal
-    Contact Us
+    Contact Me
   = form_with model: @feedback, class: 'contact-us-page--form' do |f|
 
     .form-group
