FIX: Remove Lorum

--- a/app/views/pages/_team.html.haml
+++ b/app/views/pages/_team.html.haml
@@ -52,6 +52,6 @@
         -#   %li.list-inline-item
         -#     %a{:href => "#"}
         -#       %i.fab.fa-linkedin
-  .row
-    .col-lg-8.offset-lg-2.text-center
-      %p.large.text-muted Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.
+  -# .row
+  -#   .col-lg-8.offset-lg-2.text-center
+  -#     %p.large.text-muted Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.
