--- a/app/views/pages/_skills.html.haml
+++ b/app/views/pages/_skills.html.haml
@@ -1,8 +1,8 @@
 / ///// skills SECTION /////
-%section#skills.skills
+%section#skills.skills.w-full
 
 
-  .section-head
+  .section-head.text-center
     %h2 Skills
     %hr
     %p I've done a lot of things...here is a sampling.
@@ -30,7 +30,7 @@
       .skill-item
         %i.fas.fa-cogs
         %h4 Product Strategy
-        %p Bringing your product successfully to market requires more than 'management', it requires vision. Coordinating the various aspects of a successful launch can be daunting. I have brought several products to fruition. From conception, design, user testing, coding, marketing, distribution and support.
+        %p Bringing your product successfully to market requires more than 'management', it requires vision. I have brought several products to fruition. From conception, design, user testing, coding, marketing, distribution and support.
       .skill-item
         %i.fas.fa-child
         %h4 I have fun w/ puns
