--- a/app/javascript/davechmura_website/stylesheets/application.sass
+++ b/app/javascript/davechmura_website/stylesheets/application.sass
@@ -14,7 +14,7 @@ img[alt=""] img:not([alt])
   border: 5px dashed #c00
 
 body
-  @apply flex flex-col h-full
+  @apply flex flex-col h-full bg-blue-lightest
 .content
   @apply -my-6 px-6 mx-auto
 
